@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6157: Fixed tkinter.Text.debug().  Original patch by Guilherme Polo.
+
 - Issue #6160: The bbox() method of tkinter.Spinbox now returns a tuple of
   integers instead of a string.  Based on patch by Guilherme Polo.
 
